<resources>
    <string name="app_name">IMCAppli</string>
    <string name="weight">Poids</string>
    <string name="size">Taille</string>
    <string name="m">mètres</string>
    <string name="cm">centimètres</string>
    <string name="validate">Calculer mon IMC</string>
    <string name="reset">RAZ</string>
    <string name="master_func">Méga fonction !!</string>
    <string name="results">Résultats :</string>
    <string name="when_no_results">Vous devez cliquer sur le bouton «Calculer mon IMC» pour afficher le résultat.</string>
    <string name="wrong_values">Entrez des valeurs positives de poids et de taille.</string>
    <string name="master_msg">Bien joué, tu est à :</string>
</resources>
